CBV로 블로그 포스트 상세페이지 만들기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Yurim Blog</h1>
-{% for p in posts %}
+{% for p in post_list %}
     <hr/>
                 <!-- '/blog/2' -->
     <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
