--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -43,7 +43,7 @@
             <!-- Featured blog post-->
             {% for p in post_list %}
             <div class="card mb-4">
-                <a href="#!"><img class="card-img-top" src="https://picsum.photos/900/300/?{{ p.pk }}" alt="..." /></a>
+                <a href="#!"><img class="card-img-top" src="{{ p.head_image.url }}" alt="..." /></a>
                 <div class="card-body">
                     <div class="small text-muted">{{ p.created_at }}</div>
                     <h2 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
