--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -48,7 +48,7 @@
                     <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
                 </header>
                 <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded" src="https://picsum.photos/900/300/?{{ p.pk }}" alt="..." /></figure>
+                <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="..." /></figure>
                 <!-- Post content-->
                 <section class="mb-5">
                     <p class="fs-5 mb-4">{{ post.content }}</p>
