포스트 목록, 상세 페이지에서 대표 이미지 없을 때 문제 해결하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -48,7 +48,11 @@
                     <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
                 </header>
                 <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="..." /></figure>
+                {% if post.head_image %}
+                <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" /></figure>
+                {% else %}
+                <img class ="img_fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image">
+                {% endif %}
                 <!-- Post content-->
                 <section class="mb-5">
                     <p class="fs-5 mb-4">{{ post.content }}</p>
