--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -43,7 +43,11 @@
             <!-- Featured blog post-->
             {% for p in post_list %}
             <div class="card mb-4">
-                <a href="#!"><img class="card-img-top" src="{{ p.head_image.url }}" alt="..." /></a>
+                {% if p.head_image %}
+                <a href="#!"><img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }}" head image /></a>
+                {% else %}
+                <img class="card-image-top" src="http://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
+                {% endif %}
                 <div class="card-body">
                     <div class="small text-muted">{{ p.created_at }}</div>
                     <h2 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
