--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -56,8 +56,27 @@
                 <!-- Post content-->
                 <section class="mb-5">
                     <p class="fs-5 mb-4">{{ post.content }}</p>
+                    
+                    {% if post.file_upload %}
+                    <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" role="button" download>
+                        Download:
+                        {% if post.get_file_ext == 'csv' %}
+                        <i class="bi bi-filetype-csv"></i>
+                        {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                        <i class="bi bi-filetype-xlsx"></i>
+                        {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc' %}
+                        <i class="bi bi-filetype-docx"></i>
+                        {% elif post.get_file_ext == 'pdf' %}
+                        <i class="bi bi-filetype-pdf"></i>
+                        {% else %}
+                        <i class="bi bi-files-alt"></i>
+                        {% endif %}
+                        {{ post.get_file_name }}
+
+                    </a>
+                    {% endif %}
+
                 </section>
-        
             </article>
             <!-- Comments section-->
             <section class="mb-5">
@@ -123,6 +142,7 @@
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
 </footer>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
