포스트 목록 페이지에 카테고리 기능 추가하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,20 +8,25 @@
     <div class="col-lg-8">
         <!-- Featured blog post-->
         {% for p in post_list %}
-        <div class="card mb-4">
+        <div class="card mb-4" id="post-{{ p.pk }}">
             {% if p.head_image %}
             <a href="#!"><img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }}" head image /></a>
             {% else %}
             <img class="card-image-top" src="http://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
             {% endif %}
             <div class="card-body">
+                {% if p.category %}
+                    <span class="badge badge-secondary float-right">{{ p.category }}</span>
+                {% else %}
+                    <span class="badge badge-secondary float-right">미분류</span>
+                {% endif %}
                 <div class="small text-muted">{{ p.created_at }}</div>
                 <h2 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
                 {% if p.hook_text %}
                 <h5 class="text-muted">{{ p.hook_text }}</h5>
                 {% endif %}
                 <p class="card-text">{{ p.content | truncatewords:45 }}</p>
-                <a class="btn btn-primary" href="#!">Read more →</a>
+                <!-- <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a> -->
             </div>
         </div>
         {% endfor %}
