--- a/blog/templates/blog/side.html
+++ b/blog/templates/blog/side.html
@@ -1,7 +1,7 @@
 <!-- Side widgets-->
 <div class="col-lg-4">
     <!-- Search widget-->
-    <div class="card mb-4">
+    <div class="card mb-4" id="categories-card">
         <div class="card-header">Search</div>
         <div class="card-body">
             <div class="input-group">
@@ -16,20 +16,26 @@
         <div class="card-header">Categories</div>
         <div class="card-body">
             <div class="row">
-                <div class="col-sm-6">
-                    <ul class="list-unstyled mb-0">
+                    <!-- <ul class="list-unstyled mb-0"> -->
+                        {% for category in categories %}
+                        <li>
+                            <a href="{{ category.get_absolute_url }}">{{ category }} ({{category.post_set.count}})</a>
+                        </li>
+                        {% endfor %}
+                        <li>
+                            <a href="/blog/category/no_category/">미분류 ({{no_category_post_set.count}})</a>
+                        </li>
                         <li><a href="#!">Web Design</a></li>
                         <li><a href="#!">HTML</a></li>
                         <li><a href="#!">Freebies</a></li>
-                    </ul>
-                </div>
+                    <!-- </ul> -->
+                <!-- </div>
                 <div class="col-sm-6">
                     <ul class="list-unstyled mb-0">
                         <li><a href="#!">JavaScript</a></li>
                         <li><a href="#!">CSS</a></li>
                         <li><a href="#!">Tutorials</a></li>
-                    </ul>
-                </div>
+                    </ul> -->
             </div>
         </div>
     </div>
